--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,5 +1,4 @@
 project(tfc-docs)
 
-# set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
-include(tfc_docs)
-set_docs(${CMAKE_CURRENT_SOURCE_DIR} ON)
+init_doxygen()
+read_the_docs(${CMAKE_CURRENT_SOURCE_DIR})
