--- a/cockpit/package.json
+++ b/cockpit/package.json
@@ -25,6 +25,7 @@
     "@types/react-modal": "^3.13.1",
     "@ui-schema/ds-material": "^0.4.1",
     "@ui-schema/ui-schema": "^0.4.5",
+    "ace-builds": "^1.32.8",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "hamburger-react": "^2.5.0",
@@ -33,6 +34,7 @@
     "js-quantities": "^1.8.0",
     "mathjs": "^11.8.2",
     "react": "^18.2.0",
+    "react-ace": "^11.0.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-icons": "^4.4.0",
