--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -10,8 +10,7 @@
       "repository": "https://github.com/skaginn3x/vcpkg-registry",
       "baseline": "1fdcdb95a02b35164c459fbd40f609a62c4cb1ed",
       "packages": [
-        "sdbusplus",
-        "liblzma"
+        "sdbusplus"
       ]
     }
   ],
