--- a/libs/ipc/testing/tests/CMakeLists.txt
+++ b/libs/ipc/testing/tests/CMakeLists.txt
@@ -24,3 +24,6 @@ add_test(NAME item_test COMMAND item_test)
 add_executable(filter_test filter_test.cpp)
 target_link_libraries(filter_test PRIVATE Boost::ut tfc::ipc tfc::base tfc::testing tfc::stub_confman)
 add_test(NAME filter_test COMMAND filter_test)
+
+add_executable(generate_python_unit_test generate_python_unit_test.cpp)
+target_link_libraries(generate_python_unit_test PRIVATE tfc::ipc)
