update function names

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(tfc-docs)
 
-init_doxygen()
-read_the_docs(${CMAKE_CURRENT_SOURCE_DIR})
+tfc_doxygen()
+tfc_read_the_docs(${CMAKE_CURRENT_SOURCE_DIR})
