update toolchain to gcc-14 (#559)
* update glaze and mp-units

* some runtime llvm issue with doxygen, soo just build it from source

--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,8 +1,8 @@
 {
   "default-registry": {
     "kind": "git",
-    "repository": "https://github.com/microsoft/vcpkg",
-    "baseline": "66a252f70eebdd744c02d7ab8c1cc6fe123c70ee"
+    "repository": "https://github.com/jbbjarnason/vcpkg",
+    "baseline": "7bc57b8493d90d7e618e0b8319459f5b894dc01d"
   },
   "registries": [
     {
