--- a/.github/workflows/tfc-runtime.yml
+++ b/.github/workflows/tfc-runtime.yml
@@ -58,7 +58,7 @@ jobs:
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: ./containers/tfc-runtime
-          push: ${{ github.ref == 'refs/heads/main' }}
+          push: true # ${{ github.ref == 'refs/heads/main' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           file: ./containers/tfc-runtime/tfc-runtime.dockerfile
