--- a/.github/workflows/tfc-runtime.yml
+++ b/.github/workflows/tfc-runtime.yml
@@ -1,15 +1,11 @@
 name: tfc-runtime
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-#  workflow_run:
-#    workflows: ["ubuntu packaging"]
-#    branches: [main]
-#    types:
-#      - completed
-#  workflow_dispatch:
+  workflow_run:
+    workflows: ["ubuntu packaging"]
+    branches: [main]
+    types:
+      - completed
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -22,7 +18,7 @@ env:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
-#    if: github.event.workflow_run.conclusion == 'success' && github.event_name == 'release'
+    if: github.event.workflow_run.conclusion == 'success' && github.event_name == 'release'
     permissions:
       contents: read
       packages: write
@@ -58,7 +54,7 @@ jobs:
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: ./containers/tfc-runtime
-          push: true # ${{ github.ref == 'refs/heads/main' }}
+          push: ${{ github.ref == 'refs/heads/main' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           file: ./containers/tfc-runtime/tfc-runtime.dockerfile
