--- a/.github/workflows/tfc-runtime.yml
+++ b/.github/workflows/tfc-runtime.yml
@@ -50,7 +50,7 @@ jobs:
             type=semver,pattern={{major}}
             type=sha
 
-      - name: Build and push Docker image
+      - name: Build and push tfc-runtime
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: ./containers/tfc-runtime
@@ -58,3 +58,12 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           file: ./containers/tfc-runtime/tfc-runtime.dockerfile
+
+      - name: Build and push tfc-dart-sdk
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: ./containers/tfc-dart-sdk
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          file: ./containers/tfc-dart-sdk/tfc-dart-sdk.dockerfile
