--- a/.github/workflows/test-dart-sdk.yml
+++ b/.github/workflows/test-dart-sdk.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - name: what's happening
         run: |
-          docker run -it --rm --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:rw --volume=$(pwd):/home/hmi --cgroupns=host --name tfc-run1 tfc-dart-sdk:latest
+          docker run -it --rm --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:rw --volume=$(pwd):/home/hmi --cgroupns=host --name tfc-test ghcr.io/skaginn3x/skaginn3x/framework/tfc-runtime:latest
           docker ps
       - name: still running?
         run: |
