--- a/.github/workflows/test-dart-sdk.yml
+++ b/.github/workflows/test-dart-sdk.yml
@@ -26,6 +26,6 @@ jobs:
     steps:
       - name: what's happening
         run: |
-          dbus-broker-launch
+          dbus-broker-launch --scope system --audit
           ipc-ruler &
           operations &
