--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -86,6 +86,9 @@ jobs:
     name: deploy artifacts
     runs-on: ubuntu-latest
     steps:
+      - uses: yogeshlonkar/wait-for-jobs@v0
+        with:
+          jobs: 'ubuntu packaging'
       - name: Upload debian package
         uses: actions/upload-artifact@v3
         with:
@@ -190,6 +193,9 @@ jobs:
       IMAGE_NAME: tfc-runtime
 
     steps:
+      - uses: yogeshlonkar/wait-for-jobs@v0
+        with:
+          jobs: 'deploy artifacts'
       - name: Checkout repository
         uses: actions/checkout@v4
 
