--- a/.github/workflows/tfc-runtime.yml
+++ b/.github/workflows/tfc-runtime.yml
@@ -30,7 +30,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for tfc-runtime
-        id: meta
+        id: meta-tfc-runtime
         env:
           REGISTRY: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}
           IMAGE_NAME: tfc-runtime
@@ -58,7 +58,7 @@ jobs:
           file: ./containers/tfc-runtime/tfc-runtime.dockerfile
 
       - name: Extract metadata (tags, labels) for tfc-dart-sdk
-        id: meta
+        id: meta-tfc-dart-sdk
         env:
           REGISTRY: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}
           IMAGE_NAME: tfc-dart-sdk
