--- a/.github/workflows/test-dart-sdk.yml
+++ b/.github/workflows/test-dart-sdk.yml
@@ -22,10 +22,10 @@ jobs:
   build:
     name: 'build and run tests'
     runs-on: ubuntu-latest
-    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-runtime:latest
+    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-dart-sdk:latest
     steps:
       - name: what's happening
         run: |
-          dbus-broker-launch --scope system --audit
+          dbus-daemon --system
           ipc-ruler &
           operations &
