--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -1,8 +1,7 @@
 add_subdirectory(ethercat)
 add_subdirectory(button)
 add_subdirectory(gpio)
-add_subdirectory(operations)
+add_subdirectory(tmon)
 add_subdirectory(tfcctl)
-add_subdirectory(ipc-ruler)
 add_subdirectory(signal_source)
 add_subdirectory(mqtt-bridge)
