Dbus interface outlines added

--- a/exes/themis/CMakeLists.txt
+++ b/exes/themis/CMakeLists.txt
@@ -7,6 +7,8 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(SDBUSPLUS REQUIRED IMPORTED_TARGET GLOBAL sdbusplus)
 
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
+find_package(OpenSSL CONFIG REQUIRED)
+
 find_path(SQLITE_MODERN_CPP_INCLUDE_DIRS "sqlite_modern_cpp.h")
 target_include_directories(themis
     PRIVATE
@@ -22,9 +24,11 @@ target_link_libraries(themis
     tfc::confman
     tfc::logger
     tfc::dbus_util
+    tfc::snitch
     Boost::program_options
     PkgConfig::SDBUSPLUS
     unofficial::sqlite3::sqlite3
+    OpenSSL::Crypto
 )
 
 add_subdirectory(tests)
