--- a/libs/dbus_util/tests/CMakeLists.txt
+++ b/libs/dbus_util/tests/CMakeLists.txt
@@ -7,6 +7,12 @@ target_link_libraries(dbus_util_test PRIVATE Boost::ut tfc::logger tfc::base tfc
 
 add_test(NAME dbus_util_test COMMAND dbus_util_test)
 
+add_executable(dbus_compile_tests dbus_compile_tests.cpp)
+
+target_link_libraries(dbus_compile_tests PRIVATE Boost::ut tfc::logger tfc::base tfc::dbus_util)
+
+add_test(NAME dbus_compile_tests COMMAND dbus_compile_tests)
+
 if(BUILD_EXAMPLES)
-add_subdirectory(examples)
+  add_subdirectory(examples)
 endif()
