--- a/libs/ipc/testing/examples/CMakeLists.txt
+++ b/libs/ipc/testing/examples/CMakeLists.txt
@@ -7,7 +7,8 @@ target_link_libraries(print_signals_and_slots PRIVATE tfc::base tfc::ipc)
 tfc_add_example_no_test(ipc_coroutines ipc_coroutines.cpp)
 target_link_libraries(ipc_coroutines PRIVATE tfc::base tfc::ipc)
 
+find_package(gsl-lite CONFIG REQUIRED) # todo remove, mp-units should take care of this
 find_package(mp-units CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 tfc_add_example_no_test(mass_example mass_example.cpp)
-target_link_libraries(mass_example PRIVATE tfc::base tfc::ipc mp-units::si fmt::fmt)
+target_link_libraries(mass_example PRIVATE tfc::base tfc::ipc mp-units::systems fmt::fmt)
