--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,8 +1,8 @@
 {
   "default-registry": {
     "kind": "git",
-    "repository": "https://github.com/microsoft/vcpkg",
-    "baseline": "37630acd98740f98d7e51da78c9630758835037f"
+    "repository": "https://github.com/jbbjarnason/vcpkg",
+    "baseline": "bbbe0ed75e9d7f71df0926611db57e3983934261"
   },
   "registries": [
     {
