Added alarm tests as tests s.t. they run in pipes

--- a/exes/themis/tests/CMakeLists.txt
+++ b/exes/themis/tests/CMakeLists.txt
@@ -35,3 +35,6 @@ target_include_directories(themis_integration_test
     PRIVATE
     ../inc
 )
+
+add_test(NAME themis_database_test COMMAND themis_database_test)
+add_test(NAME themis_integration_test COMMAND themis_integration_test)
