--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -58,3 +58,10 @@ jobs:
           configurePreset: '${{ matrix.presets }}'
           buildPreset: '${{ matrix.presets }}'
           testPreset: '${{ matrix.presets }}'
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            */**/test-results.xml
